// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Accordion Large Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--large"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l1"
          onClick={[Function]}
        >
          Item1
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l1"
        className="ilo--accordion__panel collapse"
        id="panel-l1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-l2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--large"
          id="button-l2"
          onClick={[Function]}
        >
          Item2
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-l2"
        className="ilo--accordion__panel collapse"
        id="panel-l2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Accordion Small Accordion 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <ul
    className="ilo--accordion ilo--accordion--small"
  >
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s1"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s1"
          onClick={[Function]}
        >
          Item1
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s1"
        className="ilo--accordion__panel collapse"
        id="panel-s1"
        role="region"
      >
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
        <p>
          Content of Item 1
        </p>
      </div>
    </li>
    <li
      className="ilo--accordion__item"
    >
      <h3
        className="ilo--h3"
      >
        <button
          aria-controls="panel-s2"
          aria-expanded={false}
          className="ilo--accordion__button ilo--accordion__button--small"
          id="button-s2"
          onClick={[Function]}
        >
          Item2
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11H6v2h12v-2Z"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-expanded={null}
        aria-labelledby="button-s2"
        className="ilo--accordion__panel collapse"
        id="panel-s2"
        role="region"
      >
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
        <p>
          Content of Item 2
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 1 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h1
    className="ilo--h1 ilo--h1--actionable"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 2 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h2
    className="ilo--h2"
  >
    Heading 2
  </h2>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 3 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h3
    className="ilo--h3"
  >
    Heading 3
  </h3>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 4 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h4
    className="ilo--h4"
  >
    Heading 4
  </h4>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 5 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h5
    className="ilo--h5"
  >
    Heading 5
  </h5>
</div>
`;

exports[`Storyshots Components/Heading Heading Level 6 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h6
    className="ilo--h6"
  >
    Heading 6
  </h6>
</div>
`;
